[package]
name = "load0"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
bundler = {git = "https://github.com/weaveVM/bundler.git", branch = "shuttle-deps-bump"}
dotenv = "0.15.0"
aws-sdk-s3 = "1.80.0"
aws-config = "1.6.1"
axum = "0.8.3"
shuttle-runtime = "0.53.0"
bytes = "1.10.1"
uuid = {version = "1.16.0", features = ["v4"]}
shuttle-axum = "0.53.0"
shuttle-secrets = "0.42.0"
reqwest = { version = "0.11", features = ["json"] }
sha3 = "0.10.8"
hex = "0.4.3"
futures-util = "0.3.31"
tokio-util = {version = "0.7.14", features = ["io"] }
futures = "0.3.31"
tower-http = {version = "0.6.2", features = ["limit", "cors"]}
planetscale-driver = "0.5.1"
