[package]
name = "load0"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
bundler = {git = "https://github.com/weaveVM/bundler.git", branch = "shuttle-deps-bump"}
dotenv = "0.15.0"
aws-sdk-s3 = "1.80.0"
aws-config = "1.6.1"
axum = "0.8.3"
bytes = "1.10.1"
uuid = {version = "1.16.0", features = ["v4"]}
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sha3 = "0.10.8"
hex = "0.4.3"
futures-util = "0.3.31"
tokio-util = {version = "0.7.14", features = ["io"] }
futures = "0.3.31"
tower-http = {version = "0.6.2", features = ["limit", "cors"]}
planetscale-driver = "0.5.1"
chrono = { version = "0.4.40", features = ["serde", "clock"] }
tower_governor = "0.7.0"
headers = "0.4.0"
governor = "0.8.1"
tower = { version = "0.5.2", features = ["full"] }
ureq = "3.0.11"